--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "css-loader": "^6.3.0",
+    "style-loader": "^3.2.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
   }
