--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "private": true,
   "devDependencies": {
     "css-loader": "^6.3.0",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.3.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
